cmake_minimum_required(VERSION 3.23)
project(c___learn_code)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(c___learn_code
        .vscode/del.cpp
        "abdul bari sir/areaofcircle.cpp"
        "abdul bari sir/areaoftraingle.cpp"
        "abdul bari sir/evenorod.cpp"
        "abdul bari sir/netsalary.cpp"
        "abdul bari sir/notoperatorininteger.cpp"
        dess.cpp
        first.cpp
        lec10forloop.cpp
        lec11breakandcontinue.cpp
        lec12pointer.cpp
        lec13array.cpp
        lec14strucutre.cpp
        lec3variable.cpp
        lec4datavariable.cpp
        lec5inputoutput.cpp
        lec6header.cpp
        lec6part2operator.cpp
        lec7referencevariable.cpp
        lec8constmanipulationoperatorprecendence.cpp
        lec9ifelseandcontrolstructure.cpp)
